pom structure for submodules and inheritance is adjusted

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,10 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>common</module>
 		<module>discovery-server</module>
+		<module>dataset-url-fetcher</module>
+		<module>dataset-graph-fetcher</module>
 	</modules>
 
 </project>
