--- a/opal-confirm-conversion-service/pom.xml
+++ b/opal-confirm-conversion-service/pom.xml
@@ -7,19 +7,10 @@
         <artifactId>converter</artifactId>
         <version>0.0.1</version>
     </parent>
-    <groupId>org.dice-research</groupId>
-    <artifactId>dataset-url-fetcher</artifactId>
+    <artifactId>opal-confirm-conversion-service</artifactId>
     <version>0.0.1</version>
-    <name>dataset-url-fetcher</name>
-    <description>dataset url fetcher from crawler triple-store</description>
-
-    <repositories>
-        <repository>
-            <id>maven.aksw.snapshots</id>
-            <name>University Leipzig, AKSW Maven2 Repository</name>
-            <url>http://maven.aksw.org/archiva/repository/snapshots</url>
-        </repository>
-    </repositories>
+    <name>opal-confirm-conversion-service</name>
+    <description>unified vocabulary of all datasets' rdf to opal confirm defined vocabulary</description>
 
     <dependencies>
         <dependency>
@@ -39,6 +30,12 @@
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>apache-jena-libs</artifactId>
+            <type>pom</type>
+            <version>3.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -48,61 +45,12 @@
             <artifactId>spring-cloud-stream-test-support</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aksw.jena-sparql-api</groupId>
-            <artifactId>jena-sparql-api-core</artifactId>
-            <version>3.9.0-1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-            <version>1.4.199</version>
-        </dependency>
         <dependency>
             <groupId>org.dice-research</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
 
     <dependencyManagement>
