--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ secrets.yml
 /quality-metrics-service/mvnw.cmd
 /quality-metrics-service/mvnw
 /quality-metrics-service/.mvn/
+/triplestore-writer/mvnw
+/triplestore-writer/mvnw.cmd
+/triplestore-writer/.mvn/
