logstash-logback-encoder is added as a dependency for all modules, and logback-spring.xml is configured and added to dataset-url-fetcher to publish messages through RabbitMQ to elasticSearch

--- a/dataset-url-fetcher/src/main/resources/application.yml
+++ b/dataset-url-fetcher/src/main/resources/application.yml
@@ -23,3 +23,7 @@ info:
       url: ${CRAWLER_TRIPLESTORE_URL}/%s/query
       username: ${CRAWLER_TRIPLESTORE_USERNAME}
       password: ${CRAWLER_TRIPLESTORE_PASSWORD}
+
+#logging:
+#  level:
+#    org.springframework.cloud.sleuth.log: TRACE
