--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>6.1</version>
+		</dependency>
+	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
