--- a/.gitignore
+++ b/.gitignore
@@ -68,15 +68,12 @@ secrets.yml
 /.mvn/wrapper/MavenWrapperDownloader.java
 /discovery-server/.mvn/wrapper/maven-wrapper.properties
 /discovery-server/.mvn/wrapper/MavenWrapperDownloader.java
-/dataset-url-fetcher/mvnw
-/dataset-url-fetcher/mvnw.cmd
-/dataset-url-fetcher/.mvn/
+/dataset-fetcher/mvnw
+/dataset-fetcher/mvnw.cmd
+/dataset-fetcher/.mvn/
 /common/.mvn/
 /common/mvnw
 /common/mvnw.cmd
-/dataset-graph-fetcher/mvnw
-/dataset-graph-fetcher/mvnw.cmd
-/dataset-graph-fetcher/.mvn/
 /opal-confirm-conversion-service/mvnw
 /opal-confirm-conversion-service/mvnw.cmd
 /opal-confirm-conversion-service/.mvn/
