--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<modules>
 		<module>common</module>
 		<module>discovery-server</module>
-		<module>dataset-url-fetcher</module>
+		<module>dataset-fetcher</module>
 		<module>opal-confirm-conversion-service</module>
 		<module>quality-metrics-service</module>
 		<module>triplestore-writer</module>
