--- a/dataset-fetcher/src/main/resources/application.yml
+++ b/dataset-fetcher/src/main/resources/application.yml
@@ -1,13 +1,19 @@
 spring:
   application:
     name: dataset-fetcher
+  rabbitmq:
+    host: ${RABBITMQ_ADDRESS}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
 
 server:
   port: ${PORT:8001}
+
 
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL:http://localhost:8762/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
