--- a/opal-confirm-conversion-service/src/main/resources/application.yml
+++ b/opal-confirm-conversion-service/src/main/resources/application.yml
@@ -8,13 +8,18 @@ spring:
           destination: dataset-graph
         output:
           destination: opal-confirmed
+  rabbitmq:
+    host: ${RABBITMQ_ADDRESS}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
 
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL:http://localhost:8762/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
 
 
 logging:
