--- a/quality-metrics-service/src/main/resources/application.yml
+++ b/quality-metrics-service/src/main/resources/application.yml
@@ -9,13 +9,18 @@ spring:
           destination: opal-confirmed
         output:
           destination: quality-added-datasets
+  rabbitmq:
+    host: ${RABBITMQ_ADDRESS}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
 
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL:http://localhost:8762/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
 
 
 logging:
