--- a/triplestore-writer/src/main/resources/application.yml
+++ b/triplestore-writer/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   application:
     name: tripleStore-writer
@@ -8,13 +6,19 @@ spring:
       bindings:
         input:
           destination: quality-added-datasets
+  rabbitmq:
+    host: ${RABBITMQ_ADDRESS}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+
 
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL:http://localhost:8762/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
 
 
 info:
