multiple instance of quality metrics is done manually in docker-compose.yml, startup delay time set to 60 for services. howToRun.sh file is added

--- a/quality-metrics-service/Dockerfile
+++ b/quality-metrics-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
 COPY target/quality-metrics-service-0.0.1.jar ./app.jar
-COPY ../run.sh /run.sh
+COPY run.sh /run.sh
 RUN ["chmod", "+x", "./run.sh"]
 ENTRYPOINT ["./run.sh"]
