--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,8 @@ services:
       - mysql
   opal-confirm-conversion-service:
     image: mnafshin/opal-confirm-conversion-service
+    volumes:
+      - /var/log/converter/:/var/log/converter/
     environment:
       - RABBITMQ_ADDRESS=rabbitmq
       - RABBITMQ_PORT=5672
@@ -109,6 +111,48 @@ services:
       - dataset-fetcher
   quality-metrics-service:
     image: mnafshin/opal-quality-metrics-service:latest
+    volumes:
+      - /var/log/converter/:/var/log/converter/
+    environment:
+      - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - EUREKA_URL=http://discovery-server:8761/eureka/
+      - EUREKA_URL2=http://discovery-server-replica:8762/eureka/
+    depends_on:
+      - rabbitmq
+      - logstash
+      - discovery-server
+      - discovery-server-replica
+      - es
+      - fuseki
+      - dataset-fetcher
+      - opal-confirm-conversion-service
+  quality-metrics-service_replica_1:
+    image: mnafshin/opal-quality-metrics-service:latest
+    volumes:
+      - /var/log/converter1/:/var/log/converter/
+    environment:
+      - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - EUREKA_URL=http://discovery-server:8761/eureka/
+      - EUREKA_URL2=http://discovery-server-replica:8762/eureka/
+    depends_on:
+      - rabbitmq
+      - logstash
+      - discovery-server
+      - discovery-server-replica
+      - es
+      - fuseki
+      - dataset-fetcher
+      - opal-confirm-conversion-service
+  quality-metrics-service_replica_2:
+    image: mnafshin/opal-quality-metrics-service:latest
+    volumes:
+      - /var/log/converter2/:/var/log/converter/
     environment:
       - RABBITMQ_ADDRESS=rabbitmq
       - RABBITMQ_PORT=5672
@@ -127,6 +171,8 @@ services:
       - opal-confirm-conversion-service
   triplestore-writer:
     image: mnafshin/opal-triplestore-writer:latest
+    volumes:
+      - /var/log/converter/:/var/log/converter/
     environment:
       - RABBITMQ_ADDRESS=rabbitmq
       - RABBITMQ_PORT=5672
