--- a/quality-metrics-service/src/main/resources/application.yml
+++ b/quality-metrics-service/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       bindings:
         input:
           destination: opal-confirmed
+          group: civet
         output:
           destination: quality-added-datasets
   rabbitmq:
