--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		<module>quality-metrics-service</module>
 		<module>triplestore-writer</module>
 		<module>elasticsearch-writer</module>
+		<module>webservices</module>
 	</modules>
 
 </project>
