--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -214,3 +214,29 @@ services:
       - dataset-fetcher
       - opal-confirm-conversion-service
       - quality-metrics-service
+  webservices:
+    image: mnafshin/opal-webservices:latest
+    volumes:
+      - /var/log/converter/:/var/log/converter/
+    environment:
+      - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - OPAL_TRIPLESTORE_URL=fuseki
+      - OPAL_TRIPLESTORE_USERNAME=${OPAL_TRIPLESTORE_USERNAME}
+      - OPAL_TRIPLESTORE_PASSWORD=${OPAL_TRIPLESTORE_PASSWORD}
+      - EUREKA_URL=http://discovery-server:8761/eureka/
+      - EUREKA_URL2=http://discovery-server-replica:8762/eureka/
+    ports:
+      - 8080:8080
+    depends_on:
+      - rabbitmq
+      - logstash
+      - discovery-server
+      - discovery-server-replica
+      - es
+      - fuseki
+      - dataset-fetcher
+      - opal-confirm-conversion-service
+      - quality-metrics-service
