--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,17 +1,14 @@
 spring:
   application:
     name: discovery-server
-  rabbitmq:
-    host: ${RABBITMQ_ADDRESS}
-    port: ${RABBITMQ_PORT}
-    username: ${RABBITMQ_USERNAME}
-    password: ${RABBITMQ_PASSWORD}
 
 server:
   port: ${PORT:8761}
 
-client:
-  registerWithEureka: true
-  fetchRegistry: true
-  serviceUrl:
-    defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+
+logging:
+  file: /var/log/converter/discovery-server.log
