--- a/opal-confirm-conversion-service/src/main/resources/application.yml
+++ b/opal-confirm-conversion-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
 
 
 logging:
