--- a/logstash_AMQP.conf
+++ b/logstash_AMQP.conf
@@ -1,6 +1,8 @@
 input {
   rabbitmq {
      host => "rabbitmq"
+     user => "${RABBITMQ_USERNAME}"
+     password => "${RABBITMQ_PASSWORD}"
      port => 5672
      durable => true
      exchange => "ex_logstash"
@@ -10,6 +12,6 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["es:9200"]
+    hosts => "es:9200"
   }
 }
