--- a/elasticsearch-writer/src/main/resources/application.yml
+++ b/elasticsearch-writer/src/main/resources/application.yml
@@ -21,9 +21,10 @@ eureka:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/},${EUREKA_URL2:http://localhost:8762/eureka/}
 
 
-#info:
-#  opal:
-#    elasticsearch:
-#      url: http://${OPAL_ELASTICSEARCH_URL}:9200
+info:
+  opal:
+    elasticsearch:
+      url: ${OPAL_ELASTICSEARCH_URL}
+      port: ${OPAL_ELASTICSEARCH_PORT}
 #      username: ${OPAL_ELASTICSEARCH_USERNAME}
 #      password: ${OPAL_ELASTICSEARCH_PASSWORD}
