--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -6,12 +6,11 @@
         <groupId>org.dice-research</groupId>
         <artifactId>converter</artifactId>
         <version>0.0.1</version>
-        <relativePath>..</relativePath> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>elsticsearch-writer</artifactId>
+    <artifactId>config-server</artifactId>
     <version>0.0.1</version>
-    <name>elasticsearch-writer</name>
-    <description>writer for elastic search database</description>
+    <name>config-server</name>
+    <description>configuration server for all modules</description>
 
     <dependencies>
         <dependency>
@@ -20,35 +19,17 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-stream</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-stream-test-support</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.dice-research</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
