Enhanced. app.jar as the name of java artifacts in docker is replaced by their own name. docker-compose.yml is downgraded from 3.2 to 2.4

--- a/elasticsearch-writer/Dockerfile
+++ b/elasticsearch-writer/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/*.jar ./app.jar
+COPY target/elsticsearch-writer-0.0.1.jar ./elsticsearch-writer.jar
 COPY run.sh /run.sh
 RUN ["chmod", "+x", "./run.sh"]
 ENTRYPOINT ["./run.sh"]
