--- a/triplestore-writer/Dockerfile
+++ b/triplestore-writer/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/triplestore-writer-0.0.1.jar ./app.jar
+COPY target/triplestore-writer-0.0.1.jar ./triplestore-writer.jar
 COPY run.sh /run.sh
 RUN ["chmod", "+x", "./run.sh"]
 ENTRYPOINT ["./run.sh"]
