--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8
-COPY target/*.jar ./app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+COPY target/config-server-0.0.1.jar ./config-server.jar
+ENTRYPOINT ["java", "-jar", "/config-server.jar"]
