--- a/quality-metrics-service/Dockerfile
+++ b/quality-metrics-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/quality-metrics-service-0.0.1.jar ./app.jar
+COPY target/quality-metrics-service-0.0.1.jar ./quality-metrics-service.jar
 COPY run.sh /run.sh
 RUN ["chmod", "+x", "./run.sh"]
 ENTRYPOINT ["./run.sh"]
