Enhanced. generating unique id for dataset by adding their catalog is done. OriginUri for dataset is added to the Model. typo for elasticsearch is fixed

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         git:
           uri: ${CONFIG_REPO}
           clone-on-start: true
-          default-label: ${CONFIG_REPO_DEFAULT_BRANCH}
+          default-label: ${CONFIG_REPO_DEFAULT_BRANCH:master}
 
 server:
   port: 8888
