--- a/elasticsearch-writer/Dockerfile
+++ b/elasticsearch-writer/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/elsticsearch-writer-0.0.1.jar ./elsticsearch-writer.jar
+COPY target/elasticsearch-writer-0.0.1.jar ./elasticsearch-writer.jar
 COPY run.sh /run.sh
 RUN ["chmod", "+x", "./run.sh"]
 ENTRYPOINT ["./run.sh"]
