--- a/opal-confirm-conversion-service/pom.xml
+++ b/opal-confirm-conversion-service/pom.xml
@@ -12,6 +12,20 @@
     <name>opal-confirm-conversion-service</name>
     <description>unified vocabulary of all datasets' rdf to opal confirm defined vocabulary</description>
 
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>maven.aksw.internal</id>-->
+<!--            <name>AKSW Repository</name>-->
+<!--            <url>http://maven.aksw.org/archiva/repository/internal</url>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>maven.aksw.snapshots</id>-->
+<!--            <name>AKSW Snapshot Repository</name>-->
+<!--            <url>http://maven.aksw.org/archiva/repository/snapshots</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -55,6 +69,11 @@
             <version>0.0.1</version>
             <scope>compile</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.dice-research.opal</groupId>-->
+<!--            <artifactId>common</artifactId>-->
+<!--            <version>1.0.7.2-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <dependencyManagement>
