--- a/dataset-fetcher/pom.xml
+++ b/dataset-fetcher/pom.xml
@@ -14,8 +14,13 @@
 
     <repositories>
         <repository>
+            <id>maven.aksw.internal</id>
+            <name>AKSW Repository</name>
+            <url>http://maven.aksw.org/archiva/repository/internal</url>
+        </repository>
+        <repository>
             <id>maven.aksw.snapshots</id>
-            <name>University Leipzig, AKSW Maven2 Repository</name>
+            <name>AKSW Snapshot Repository</name>
             <url>http://maven.aksw.org/archiva/repository/snapshots</url>
         </repository>
     </repositories>
@@ -93,7 +98,7 @@
         <dependency>
             <groupId>org.aksw.jena-sparql-api</groupId>
             <artifactId>jena-sparql-api-core</artifactId>
-            <version>3.9.0-1</version>
+            <version>3.12.0-1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -110,10 +115,9 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dice-research</groupId>
+            <groupId>org.dice-research.opal</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>[1,2)</version>
         </dependency>
     </dependencies>
 
