--- a/opal-confirm-conversion-service/pom.xml
+++ b/opal-confirm-conversion-service/pom.xml
@@ -12,19 +12,18 @@
     <name>opal-confirm-conversion-service</name>
     <description>unified vocabulary of all datasets' rdf to opal confirm defined vocabulary</description>
 
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>maven.aksw.internal</id>-->
-<!--            <name>AKSW Repository</name>-->
-<!--            <url>http://maven.aksw.org/archiva/repository/internal</url>-->
-<!--        </repository>-->
-<!--        <repository>-->
-<!--            <id>maven.aksw.snapshots</id>-->
-<!--            <name>AKSW Snapshot Repository</name>-->
-<!--            <url>http://maven.aksw.org/archiva/repository/snapshots</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
-
+    <repositories>
+        <repository>
+            <id>maven.aksw.internal</id>
+            <name>AKSW Repository</name>
+            <url>http://maven.aksw.org/archiva/repository/internal</url>
+        </repository>
+        <repository>
+            <id>maven.aksw.snapshots</id>
+            <name>AKSW Snapshot Repository</name>
+            <url>http://maven.aksw.org/archiva/repository/snapshots</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -48,12 +47,6 @@
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena-libs</artifactId>
-            <type>pom</type>
-            <version>3.9.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -64,16 +57,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.dice-research</groupId>
+            <groupId>org.dice-research.opal</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>[1,2)</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.dice-research.opal</groupId>-->
-<!--            <artifactId>common</artifactId>-->
-<!--            <version>1.0.7.2-SNAPSHOT</version>-->
-<!--        </dependency>-->
     </dependencies>
 
     <dependencyManagement>
