--- a/triplestore-writer/pom.xml
+++ b/triplestore-writer/pom.xml
@@ -11,11 +11,15 @@
     <version>0.0.1</version>
     <name>triplestore-writer</name>
     <description>Write the given jena model in the assigned triple store</description>
-
     <repositories>
         <repository>
+            <id>maven.aksw.internal</id>
+            <name>AKSW Repository</name>
+            <url>http://maven.aksw.org/archiva/repository/internal</url>
+        </repository>
+        <repository>
             <id>maven.aksw.snapshots</id>
-            <name>University Leipzig, AKSW Maven2 Repository</name>
+            <name>AKSW Snapshot Repository</name>
             <url>http://maven.aksw.org/archiva/repository/snapshots</url>
         </repository>
     </repositories>
@@ -44,7 +48,7 @@
         <dependency>
             <groupId>org.aksw.jena-sparql-api</groupId>
             <artifactId>jena-sparql-api-core</artifactId>
-            <version>3.9.0-1</version>
+            <version>3.12.0-1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -67,11 +71,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.dice-research</groupId>
+            <groupId>org.dice-research.opal</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>[1,2)</version>
         </dependency>
+
     </dependencies>
 
     <dependencyManagement>
