Enhanced. Lombok is added and used for Portal.java, DataSetFetcher is refactored and log.trace are added to internal private functions. all actuator endpoints are exposed

--- a/dataset-fetcher/pom.xml
+++ b/dataset-fetcher/pom.xml
@@ -119,6 +119,10 @@
             <artifactId>common</artifactId>
             <version>[1,2)</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
