--- a/dataset-fetcher/src/main/resources/bootstrap.yml
+++ b/dataset-fetcher/src/main/resources/bootstrap.yml
@@ -18,3 +18,9 @@ eureka:
     register-with-eureka: true
     serviceUrl:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
