Maintain. Config-server uri is used instead of id

--- a/quality-metrics-service/src/main/resources/bootstrap.yml
+++ b/quality-metrics-service/src/main/resources/bootstrap.yml
@@ -3,14 +3,12 @@ spring:
     name: quality-metrics-service
   cloud:
     config:
-      discovery:
-        enabled: true
-        service-id: config-server
       retry:
         initialInterval: 2000
         multiplier: 1.5
         maxInterval: 60000
         maxAttempts: 100
+      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
 
 eureka:
   client:
